--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-csp-header": "^4.1.0",
     "helmet": "^4.1.0",
     "morgan": "^1.10.0"
   },
