--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "lint": "eslint --fix src"
+    "lint": "eslint --fix src",
+    "plugin": "node scripts/Install_plugins.js"
   },
   "keywords": [],
   "author": "BolverBlitz",
